# circuit-exploration

./: .gitignore  build-mini-fuzz.bat  build-vst3.bat  gemini-context-30-06.md  index.html  package-lock.json  package.json  plano-vst3.md  video-transcript.txt  vst3-plugins-planning.md
mini-fuzz/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  moduleinfo.json
src/: App.jsx  FalstadToLTSpiceConverter.jsx
src/utils/: circuitToVST3.js  functions.js  mnaSolver.js
vst3-template/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
